chore(gitignore): add chromedriver.exe

--- a/.gitignore
+++ b/.gitignore
@@ -222,4 +222,4 @@ pyrightconfig.json
 .history
 .ionide
 
-# End of https://www.toptal.com/developers/gitignore/api/python,macos,visualstudiocode
+chromedriver.exe
